Исправления README и документации: синхронизация с API, этапами 3-4 и Postman-сценарием
